# tauri-plugin-shell

./: CHANGELOG.md  Cargo.toml  DEPENDENTS.md  README.md  api-iife.js  build.rs  package.json  rollup.config.js
Source/: commands.rs  config.rs  error.rs  lib.rs  open.rs  scope.rs  scope_entry.rs
Source/process/: mod.rs
dist-js/: index.cjs  index.d.ts  index.js
guest-js/: index.ts  init.ts
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  init-iife.js  scope.rs
