[build-dependencies]
schemars = { workspace = true }
serde = { workspace = true }
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
encoding_rs = "0.8"
log = { workspace = true }
open = { version = "5", features = ["shellexecute-on-windows"] }
os_pipe = "1"
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
shared_child = "1"
tauri = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["time"] }

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Access the system shell. Allows you to spawn child processes and manage files and URLs using their default application."
edition = { workspace = true }
license-file = { workspace = true }
links = "tauri-plugin-shell"
name = "tauri-plugin-shell"
repository = { workspace = true }
rust-version = { workspace = true }
version = "2.2.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "partial", notes = "Only allows to open URLs via `open`" }
ios = { level = "partial", notes = "Only allows to open URLs via `open`" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "" }

[target]

[target.'cfg(target_os = "ios")']

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { workspace = true, features = ["wry"] }
