[build-dependencies]
schemars = { version = "0.8.21" }
serde = { version = "1.0.217" }
tauri-plugin = { version = "2.0.4", features = ["build"] }

[dependencies]
encoding_rs = "0.8"
log = { version = "0.4.25" }
open = { version = "5", features = ["shellexecute-on-windows"] }
os_pipe = "1"
regex = "1"
serde = { version = "1.0.217" }
serde_json = { version = "1.0.138" }
shared_child = "1"
tauri = { version = "2.2.5" }
thiserror = { version = "2.0.11" }
tokio = { version = "1", features = ["time"] }

[lib]
path = "Source/lib.rs"

[package]
authors = ["Tauri Programme within The Commons Conservancy"]
description = "Access the system shell. Allows you to spawn child processes and manage files and URLs using their default application."
edition = "2024"
license-file = "LICENSE"
links = "tauri-plugin-shell-read-only"
name = "tauri-plugin-shell-read-only"
repository = "https://github.com/tauri-apps/tauri"
rust-version = "1.85.0"
version = "2.2.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "partial", notes = "Only allows to open URLs via `open`" }
ios = { level = "partial", notes = "Only allows to open URLs via `open`" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "" }

[target]

[target.'cfg(target_os = "ios")']

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2.2.5", features = ["wry"] }
